testsuite/tests/properties/invalid_no/test.out
== bad_type/test.lkt ==
test.lkt:4:38: error: Invalid type for Null expression: Int
4 |     @exported fun prop(): Int = null[Int]
  |                                      ^^^


== correct/test.lkt ==
Code generation was successful

lkt_compile: Done
